# kafka-control-center

kafka-control-center/backend/: Dockerfile  pom.xml  pyproject.toml  requirements.txt
kafka-control-center/backend/app/: ai_service.py  clusters.yaml  config.py  kafka_service.py  main.py
kafka-control-center/backend/app/core/: kafka_admin.py  kafka_consumer.py
kafka-control-center/backend/app/routers/: ai.py  brokers.py  clusters.py  consumer_groups.py  topic_details.py  topics.py  ws.py
kafka-control-center/backend/kafka_control_center_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kafka-control-center/backend/src/main/java/com/kafkamind/: KafkaMindApplication.java
kafka-control-center/backend/src/main/java/com/kafkamind/config/: GlobalExceptionHandler.java  SecurityConfig.java
kafka-control-center/backend/src/main/java/com/kafkamind/controller/: AiController.java  AuthController.java  BrokerAclController.java  KafkaController.java  MessageActionController.java  StreamingController.java
kafka-control-center/backend/src/main/java/com/kafkamind/model/: KafkaCluster.java  RequestLog.java  StreamPipeline.java  User.java
kafka-control-center/backend/src/main/java/com/kafkamind/repository/: KafkaClusterRepository.java  StreamPipelineRepository.java  UserRepository.java
kafka-control-center/backend/src/main/java/com/kafkamind/security/: JwtFilter.java  JwtUtil.java  UserDetailsServiceImpl.java
kafka-control-center/backend/src/main/java/com/kafkamind/service/: AnthropicService.java  (+4 more)
kafka-control-center/backend/src/main/resources/: application.yml
(+57 files in other folders)
