[project]
name = "kafka-control-center-backend"
version = "0.1.0"
description = "Modern Kafka control center backend (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "python-dotenv",
  "confluent-kafka",
  "anthropic",
  "jinja2",
  "aiofiles"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
